--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,14 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.github.MikeOrtiz:TouchImageView:1.4.0'
+    implementation 'com.facebook.fresco:fresco:1.13.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    //annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
 }
